On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   sleep_scoring.ipynb

--- a/sleep_scoring.ipynb
+++ b/sleep_scoring.ipynb
@@ -627,13 +627,7 @@
       "83/83 [==============================] - 0s 2ms/step - loss: 0.8310\n",
       "Epoch 198/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.8391\n",
-      "Epoch 199/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 199/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.8323\n",
       "Epoch 200/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.8306\n",
@@ -1031,13 +1025,7 @@
       "83/83 [==============================] - 0s 2ms/step - loss: 0.5462\n",
       "Epoch 394/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.5525\n",
-      "Epoch 395/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 395/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.5380\n",
       "Epoch 396/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.5451\n",
@@ -1435,13 +1423,7 @@
       "83/83 [==============================] - 0s 2ms/step - loss: 0.3257\n",
       "Epoch 590/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.2994\n",
-      "Epoch 591/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 591/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.2885\n",
       "Epoch 592/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.2888\n",
@@ -1839,13 +1821,7 @@
       "83/83 [==============================] - 0s 2ms/step - loss: 0.1755\n",
       "Epoch 786/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.1559\n",
-      "Epoch 787/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 787/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.1604\n",
       "Epoch 788/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.1643\n",
@@ -2243,13 +2219,7 @@
       "83/83 [==============================] - 0s 2ms/step - loss: 0.3678\n",
       "Epoch 982/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.0872\n",
-      "Epoch 983/1000\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 983/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.0937\n",
       "Epoch 984/1000\n",
       "83/83 [==============================] - 0s 2ms/step - loss: 0.0796\n",
@@ -2511,13 +2481,7 @@
       "1/1 [==============================] - 0s 18ms/step\n",
       "1/1 [==============================] - 0s 20ms/step\n",
       "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 18ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 18ms/step\n",
       "1/1 [==============================] - 0s 19ms/step\n",
       "1/1 [==============================] - 0s 18ms/step\n",
       "1/1 [==============================] - 0s 17ms/step\n",
@@ -2837,13 +2801,7 @@
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 24ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 24ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 24ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 24ms/step\n",
@@ -3163,13 +3121,7 @@
       "1/1 [==============================] - 0s 20ms/step\n",
       "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 19ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 21ms/step\n",
       "1/1 [==============================] - 0s 21ms/step\n",
@@ -3489,13 +3441,7 @@
       "1/1 [==============================] - 0s 36ms/step\n",
       "1/1 [==============================] - 0s 35ms/step\n",
       "1/1 [==============================] - 0s 35ms/step\n",
-      "1/1 [==============================] - 0s 45ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 45ms/step\n",
       "1/1 [==============================] - 0s 32ms/step\n",
       "1/1 [==============================] - 0s 37ms/step\n",
       "1/1 [==============================] - 0s 38ms/step\n",
@@ -3815,13 +3761,7 @@
       "1/1 [==============================] - 0s 20ms/step\n",
       "1/1 [==============================] - 0s 21ms/step\n",
       "1/1 [==============================] - 0s 21ms/step\n",
-      "1/1 [==============================] - 0s 21ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 21ms/step\n",
       "1/1 [==============================] - 0s 21ms/step\n",
       "1/1 [==============================] - 0s 21ms/step\n",
       "1/1 [==============================] - 0s 21ms/step\n",
@@ -4141,13 +4081,7 @@
       "1/1 [==============================] - 0s 20ms/step\n",
       "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 21ms/step\n",
@@ -4467,13 +4401,7 @@
       "1/1 [==============================] - 0s 25ms/step\n",
       "1/1 [==============================] - 0s 36ms/step\n",
       "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 28ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 28ms/step\n",
       "1/1 [==============================] - 0s 24ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 24ms/step\n",
@@ -4793,13 +4721,7 @@
       "1/1 [==============================] - 0s 24ms/step\n",
       "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 24ms/step\n",
@@ -5280,13 +5202,7 @@
       "1/1 [==============================] - 0s 25ms/step\n",
       "1/1 [==============================] - 0s 24ms/step\n",
       "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 26ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 26ms/step\n",
       "1/1 [==============================] - 0s 27ms/step\n",
       "1/1 [==============================] - 0s 26ms/step\n",
       "1/1 [==============================] - 0s 26ms/step\n",
@@ -5606,13 +5522,7 @@
       "1/1 [==============================] - 0s 26ms/step\n",
       "1/1 [==============================] - 0s 24ms/step\n",
       "1/1 [==============================] - 0s 25ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 22ms/step\n",
@@ -5932,13 +5842,7 @@
       "1/1 [==============================] - 0s 21ms/step\n",
       "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
-      "1/1 [==============================] - 0s 22ms/step\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1/1 [==============================] - 0s 22ms/step\n",
       "1/1 [==============================] - 0s 21ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
       "1/1 [==============================] - 0s 23ms/step\n",
@@ -6119,7 +6023,9 @@
    "id": "f8718a10",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#making the edits for zee gits"
+   ]
   }
  ],
  "metadata": {
